# mmdd

./: .travis.yml  CMakeLists.txt  README.md  keybase.md
cfg/: mmdd.cfg
source/include/: Mmdd.h  MmddConfig.h  MmddConfigException.h  MmddEvents.h
source/include/crc/: crc-ccitt.h
source/include/proto/: mmd_proto.h
source/src/: Mmdd.cpp  MmddConfig.cpp  MmddConfigException.cpp  MmddEvents.cpp  main.cpp  mmdc.cpp  mmde.cpp
source/src/crc/: crc-ccitt.c  lib_crc.c
